<resources>
    <string name="app_name">Ethylotest</string>
    <string name="Wine">Wine</string>
    <string name="Beer">Beer</string>
    <string name="Whiskey">Whiskey</string>
    <string name="Name">Name</string>
    <string name="Volume_cl">Volume (in cl)</string>
    <string name="Alcohol_pourcentage">Alcohol (in %)</string>
    <string name="Cancel">Cancel</string>
    <string name="Ok">Ok</string>
    <string name="Add_Drink">Add Drink</string>
    <string name="Your_information">Your information</string>
    <string name="Your_Weight">Your Weight (in kg)</string>
    <string name="What_is_your_gender">What is your gender?</string>
    <string name="Man">Man</string>
    <string name="Woman">Woman</string>
    <string name="Your_license_level">Your license level</string>
    <string name="Young_Driver">Young Driver</string>
    <string name="Confirmed_Driver">Confirmed Driver</string>
    <string name="Please_register">Please register</string>
    <string name="You_can_t_drive">You can\'t drive</string>
    <string name="You_can_drive">You can drive</string>
    <string name="Are_you_sure_you_want_to_delete_this_drink">Are you sure you want to delete this drink?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Confirmation">Confirmation</string>
    <string name="Data_taken_into_account">Data taken into account</string>
    <string name="You_drank_too_much">You drank too much</string>
    <string name="You_can_t_drive_now">You can\'t drive now</string>
    <string name="You_will_be_able_to_drive_in">You will be able to drive in</string>
    <string name="EditDrink">Edit Drink</string>
    <string name="Date">Date</string>
    <string name="Delete">Delete</string>
    <string name="Error">Error</string>
    <string name="YouCannotSelectAFutureDateAndTime">You cannot select a future date and time.</string>
</resources>